@@ -81,35 +81,7 @@ Handler <- function(){
                         )
   add3rdmousepopupmenu(.rqda$.codes_rqda,CodesNamesWidgetMenu)
   
-  addHandlerClicked(.rqda$.codes_rqda,handler <- function(h,...){
-    if (is_projOpen(env=.rqda,conName="qdacon")){
-      ## CodeNamesUpdate(CodeNamesWidget=.rqda$.codes_rqda)
-      con <- .rqda$qdacon
-      SelectedCode <- currentCode <- svalue(.rqda$.codes_rqda)
-      if (length(SelectedCode)!=0) {
-        Encoding(SelectedCode) <- Encoding(currentCode) <- "UTF-8"
-        currentCid <- dbGetQuery(con,sprintf("select id from freecode where name=='%s'",SelectedCode))[,1]
-        SelectedFile <- tryCatch(svalue(.rqda$.root_edit)  ## use root_edit is more reliable
-                                 ,error=function(e){})
-        if (!is.null(SelectedFile)) {
-          Encoding(SelectedFile) <- "UTF-8"
-          currentFid <-  dbGetQuery(con,sprintf("select id from source where name=='%s'",SelectedFile))[,1]
-          ## following code: Only mark the text chuck according to the current code.
-          tryCatch({
-            widget <- get(h$action$marktxtwidget,.rqda)
-        ## if widget is not open, then error;which means no need to highlight anything.
-            sel_index <-  dbGetQuery(con,sprintf("select selfirst, selend from coding where
-                                                   cid==%i and fid==%i and status==1",currentCid, currentFid))
-            Maxindex <- dbGetQuery(con, sprintf("select max(selend) from coding where fid==%i", currentFid))[1,1]
-            ClearMark(widget,min=0,max=Maxindex,clear.fore.col = TRUE, clear.back.col =FALSE)
-        if (nrow(sel_index)>0){
-          HL(widget,index=sel_index,fore.col=.rqda$fore.col,back.col=NULL)}
-          },error=function(e){}) # end of mark text chuck
-        }
-      }
-    }},action=list(marktxtwidget=".openfile_gui")
-                    )
-  
+  addHandlerClicked(.rqda$.codes_rqda,handler <- function(h,...){ClickHandlerFun()})
 
 ##  addHandlerMouseMotion(.rqda$.CasesNamesWidget, handler <- function(h, ...) {
 ##    if (is_projOpen(env = .rqda, conName ="qdacon",message = FALSE)) {
